@@ -1,3 +1,7 @@
+2014-03-07  Ian Lance Taylor  <iant@google.com>
+
+	* sort.c (backtrace_qsort): Use middle element as pivot.
+
 2014-03-06  Ian Lance Taylor  <iant@google.com>
 
 	* sort.c: New file.
